progressive-rollout-with-aggregate-analysis/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: oes-argo-rollout
spec:
  replicas: 5
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: oes-argo-rollout
  template:
    metadata:
      labels:
        app: oes-argo-rollout
    spec:
      containers:
        - name: rollouts-baseline
          image: docker.io/opsmxdev/issuegen:v2.1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
  strategy:
    canary:
      canaryService: canary-svc
      stableService: production-svc
      trafficRouting:
        nginx:
          stableIngress: prod-ingress
      steps:
        - setWeight: 20
        - pause: { duration: 20s }
        - setWeight: 60
        - pause: { duration: 30s }
        - setWeight: 80
        - pause: { duration: 30s }
