progressive-rollout-with-aggregate-analysis/service_canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
  labels:
    app: oes-argo-rollout
spec:
  selector:
    app: oes-argo-rollout
  ports:
    - port: 3100
      targetPort: 8088
  type: ClusterIP
