progressive-rollout-with-aggregate-analysis/ingress_canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-canary-spin
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: canary-ingress
spec:
  rules:
  - host: argo-canary-analysis.aoa.oes.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: canary-svc
            port:
              number: 3100
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argo-canary-analysis.aoa.oes.opsmx.org
    secretName: canary-authtls
